@@ -39,7 +39,6 @@ $o = $::o = {
 #-    packages   => [ qw() ],
     partitioning => { clearall => 0, eraseBadPartitions => 0, auto_allocate => 0 }, #-, readonly => 0 },
     authentication => { md5 => 1, shadow => 1 },
-    uuid_by_default => 1,
     locale         => { lang => 'en_US' },
 #-    isUpgrade    => 0,
     toRemove     => [],
@@ -356,7 +355,7 @@ sub main {
 	    newt      => sub { $o->{interactive} = "curses" },
 	    text      => sub { $o->{interactive} = "curses" },
 	    stdio     => sub { $o->{interactive} = "stdio" },
-	    use_uuid  => sub { $o->{uuid_by_default} = $v },
+	    use_uuid  => sub { $::no_uuid_by_default = !$v },
 	    kickstart => sub { $::auto_install = $v },
 	    local_install => sub { $::local_install = 1 },
 	    uml_install => sub { $::uml_install = $::local_install = 1 },
