@@ -1,3 +1,5 @@
+- use UUID by default (for diskdrake and draklive-install)
+
 Version 10.16.1 - 18 March 2008
 
 - handle position for paned widgets (needed for rpmdrake, #38762)
